# second-brain-telegram-aws-cdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BEDROCK.md  CLAUDE.md  DEPLOY.md  INSPIRATION.md  README.md  README_CDK.md  SPECIFICATION_CHECKLIST.md  app.py  assume_role.sh  cdk_bootstrap.py  cdk_main.py  cdk_simple_main.py  demo_logging.py  deploy_cdk.py  load_env.sh  pyproject.toml  requirements.txt  template.yaml  test_anthropic.py
cdk_app/: cdk.json  cdk_app_main.py  main.py  minimal_app.py  simple_app.py
digest/: app.py
docs/adr/: 001-event-sourcing-inbox-log.md  005-event-sourcing-inbox-log.md
lambda/: digest.py  processor.py
processor/: app.py
scripts/: aws_helper.py  setup_aws.py  setup_webhook.py  tail_logs.py
second_brain/: second_brain_stack.py
tools/: aws_helper.py
