[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain-telegram-aws"
version = "0.1.0"
description = "A personal second brain system using Telegram and AWS"
authors = [{name = "Second Brain Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "aws-cdk-lib>=2.0.0",
    "constructs>=10.0.0", 
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "anthropic>=0.3.0",
    "openai>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0"
]
scripts = [
    "click>=8.0.0",
    "InquirerPy>=0.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["second_brain*", "lambda*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true