[project]
name = "second-brain"
version = "0.1.0"
description = "A personal second brain system using Telegram and AWS"
authors = [{name = "Second Brain Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cdk",
    "common",
    "lambdas",
    "scripts",
]

[project.scripts]
deploy = "deploy:deploy_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/cdk",
    "packages/common",
    "packages/lambdas",
    "packages/scripts",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/cdk/src/cdk",
    "packages/common/src/common",
    "packages/lambdas/src/lambdas",
    "packages/scripts/src/scripts",
]

[tool.uv.sources]
cdk = { workspace = true }
common = { workspace = true }
lambdas = { workspace = true }
scripts = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "F", "I", "T201"]  # E4+F: imports, I: isort, T201: print

[tool.ruff.lint.per-file-ignores]
"packages/common/src/common/environments.py" = ["T201", "I"]
"packages/lambdas/src/lambdas/actions/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["common", "lambdas", "scripts"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = [
    "packages/common/src",
]