[project]
name = "second-brain"
version = "0.1.0"
description = "A personal second brain system using Telegram and AWS"
authors = [{name = "Second Brain Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cdk",
    "common",
    "lambdas",
    "scripts",
]

[project.scripts]
deploy = "deploy:deploy_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/cdk",
    "packages/common",
    "packages/lambdas",
    "packages/scripts",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/cdk/src/cdk",
    "packages/common/src/common",
    "packages/lambdas/src/lambdas",
    "packages/scripts/src/scripts",
]

[tool.uv.sources]
cdk = { workspace = true }
common = { workspace = true }
lambdas = { workspace = true }
scripts = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "moto>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=4.3.0",
]
lambdas = [
    "boto3==1.42.30",
    "botocore==1.42.30",
    "requests==2.28.0",
    "anthropic==0.76.0",
    "openai==1.109.1",
    "pydantic==2.12.5",
    "dotenv==0.9.9",
]



[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E4", "F", "I", "T201"]  # E4+F: imports, I: isort, T201: print

[tool.ruff.lint.per-file-ignores]
"packages/common/src/common/environments.py" = ["T201", "I"]
"packages/lambdas/src/lambdas/actions/*" = ["T201"]
"packages/scripts/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["common", "lambdas", "scripts"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "packages/common/tests",
    "packages/lambdas/tests",
]
lambdas = [
    "boto3==1.42.30",
    "botocore==1.42.30",
    "requests==2.28.0",
    "anthropic==0.76.0",
    "openai==1.109.1",
    "pydantic==2.12.5",
    "dotenv==0.9.9",
]
